api remodeling and new filters added
